--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/vision": "^3.84.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "next-sanity": "^9.10.2",
