--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "sanity": "^3.84.0",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
